# rstext

./: Cargo.toml
benches/: medium.txt  small.txt  text_buffer_create.rs  text_buffer_insert.rs  text_buffer_line_content.rs
src/: config.rs  cursor.rs  editor.rs  file.rs  grapheme.rs  lib.rs  main.rs  piece_table.rs  renderer.rs  str_utils.rs  window.rs
src/commands/: app.rs  cursor.rs  edit.rs  mod.rs
src/text_buffer/: line.rs  mod.rs  piece.rs  piece_table.rs
